<resources>
    <string name="app_name">Currency</string>
    <string name="problem">Problem</string>
    <string name="please_enter_ntd">Please enter your NTD amount again.</string>
    <string name="result">Result</string>
    <string name="ok">OK</string>
    <string name="use_is">USD is</string>
    <string name="ntd">NTD</string>
    <string name="go">GO</string>
    <string name="jp">JP</string>
    <string name="us">US</string>
    <string name="none">None</string>
    <string name="jpy_is">JPY is</string>
    <string name="exchange_rate">Exchange Rate</string>
</resources>
